--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.2",
     "socket.io": "^4.7.1"
   },
   "devDependencies": {
