--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
   },
   "homepage": "https://github.com/gnigrinis/BackendProject#readme",
   "dependencies": {
+    "connect-mongo": "^5.0.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "express-session": "^1.17.3",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.2",
+    "session-file-store": "^1.5.0",
     "socket.io": "^4.7.1"
   },
   "devDependencies": {
