--- a/package.json
+++ b/package.json
@@ -23,13 +23,19 @@
   },
   "homepage": "https://github.com/gnigrinis/BackendProject#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.2",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.7.1"
   },
