--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "backend project for Coder House",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon app.js -e production",
+    "dev": "node app.js -e development",
     "test": "node ./tests/suma.spec.js"
   },
   "repository": {
@@ -43,7 +44,8 @@
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.7.1",
-    "twilio": "^4.18.0"
+    "twilio": "^4.18.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
